fix: Hardcode canvas controls backdrop-filter blur and border-radius values, and add a gap property.

--- a/theme.css
+++ b/theme.css
@@ -1029,8 +1029,11 @@ hr {
 }
 
 .canvas-controls {
-  backdrop-filter: blur(var(--set-blur));
-  border-radius: var(--canvas-controls-radius);
+  backdrop-filter: blur(20px);
+  border-radius: 24px;
+  /* fixed because of roznica w mobile and desktop */
+  gap: 4px;
+
 }
 
 /* ===================== settings open animation ===================== */
